<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SegundoActivity">

    <EditText
        android:id="@+id/editTextNombre2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edittext_hint_nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextBase2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edittext_hint_base"
        android:inputType="number"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/buttonSiguiente2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClicSiguiente2"
        android:text="@string/button_text_siguiente" />

    <Button
        android:id="@+id/buttonCerrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClicCerrar2"
        android:text="@string/button_text_cerrar" />
</LinearLayout>