<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TercerActivity">

    <EditText
        android:id="@+id/editTextNombre3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextApellido3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edittext_hint_apellido"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextBase3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextExponente3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edittext_hint_exponente"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextNumero3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edittext_hint_numero"
        android:inputType="number"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/buttonCerrar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClicCerrar3"
        android:text="@string/button_text_cerrar" />
</LinearLayout>